--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -258,53 +258,53 @@
     "explorerExclude.backup": {},
     "hide-files.files": [],
     "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/.DS_Store": true,
-        "**/Thumbs.db": true,
-        "**/CVS": true,
-        "**/.json": true,
-        "**/.vscode": true,
-        "node_modules": true,
-        "desktop.ini": true,
-        "package-lock.json": true,
-        "package.json": true,
-        ".clasp.json": true,
-        "**/appsscript.json": true,
-        "archive": true,
-        "**/.gitignore": true,
-        "**/public/adults-abbreviated.html": true,
-        "**/public/adults-home.html": true,
-        "**/public/adults-lessons.html": true,
-        "**/public/adults-remedial.html": true,
-        "**/public/disabilities-adhd.html": true,
-        "**/public/disabilities-amputees.html": true,
-        "**/public/disabilities-arthritis.html": true,
-        "**/public/disabilities-autism.html": true,
-        "**/public/disabilities-bioptics.html": true,
-        "**/public/disabilities-cerebral-palsy.html": true,
-        "**/public/disabilities-deafness.html": true,
-        "**/public/disabilities-home.html": true,
-        "**/public/disabilities-ms.html": true,
-        "**/public/disabilities-spina-bifida.html": true,
-        "**/public/disabilities-spinal-cord-injury.html": true,
-        "**/public/disabilities-stroke.html": true,
-        "**/public/disabilities-tbi.html": true,
-        "**/public/final-exam.html": true,
-        "**/public/login.html": true,
-        "**/public/seniors-home.html": true,
-        "**/public/teens-btw.html": true,
-        "**/public/teens-highschool-classes.html": true,
-        "**/public/teens-home.html": true,
-        "**/public/teens-locations.html": true,
-        "**/public/teens-online-classes.html": true,
-        "**/app.yaml": true,
-        "public\\css/datatables.min.css": true,
-        "shared/*.html": true,
-        "logs": true,
-        "ssl": true,
-        "README.txt": true
+        "**/.git": false,
+        "**/.svn": false,
+        "**/.hg": false,
+        "**/.DS_Store": false,
+        "**/Thumbs.db": false,
+        "**/CVS": false,
+        "**/.json": false,
+        "**/.vscode": false,
+        "node_modules": false,
+        "desktop.ini": false,
+        "package-lock.json": false,
+        "package.json": false,
+        ".clasp.json": false,
+        "**/appsscript.json": false,
+        "archive": false,
+        "**/.gitignore": false,
+        "**/public/adults-abbreviated.html": false,
+        "**/public/adults-home.html": false,
+        "**/public/adults-lessons.html": false,
+        "**/public/adults-remedial.html": false,
+        "**/public/disabilities-adhd.html": false,
+        "**/public/disabilities-amputees.html": false,
+        "**/public/disabilities-arthritis.html": false,
+        "**/public/disabilities-autism.html": false,
+        "**/public/disabilities-bioptics.html": false,
+        "**/public/disabilities-cerebral-palsy.html": false,
+        "**/public/disabilities-deafness.html": false,
+        "**/public/disabilities-home.html": false,
+        "**/public/disabilities-ms.html": false,
+        "**/public/disabilities-spina-bifida.html": false,
+        "**/public/disabilities-spinal-cord-injury.html": false,
+        "**/public/disabilities-stroke.html": false,
+        "**/public/disabilities-tbi.html": false,
+        "**/public/final-exam.html": false,
+        "**/public/login.html": false,
+        "**/public/seniors-home.html": false,
+        "**/public/teens-btw.html": false,
+        "**/public/teens-highschool-classes.html": false,
+        "**/public/teens-home.html": false,
+        "**/public/teens-locations.html": false,
+        "**/public/teens-online-classes.html": false,
+        "**/app.yaml": false,
+        "public\\css/datatables.min.css": false,
+        "shared/*.html": false,
+        "logs": false,
+        "ssl": false,
+        "README.txt": false
     },
     "folder-color.pathColors": [],
     
